--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body style="margin-left:30px">
     <div id="app">
-        <h1>{{ message }}</h1>
+        <h1 class="text-center text-capitalize text-danger">{{ message }}</h1>
         <hr />
         <button class="btn btn-info" v-on:click="sayHello()">Say Hello</button>
     </div>
